MC_JAVA_OPTS set up